--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,5 +2,5 @@ title: nanoFramework Notes
 description: My notes and examples on nanoFramework
 theme: just-the-docs
 
-url: https://TerryFogg.github.io/nanoFramework/docs
+url: https://nanoFramework.au
 
