--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -9,7 +9,8 @@ name: Deploy Jekyll site to Pages
 on:
   push:
     branches: ["main"]
-
+    paths:
+      - "docs/**"
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -40,11 +41,10 @@ jobs:
           ruby-version: '3.1' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
-      - name: Setup Pages
+          working-directory: '${{ github.workspace }}/docs'
+      =- name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
-      - name: Install GEMS
-        run: bundle install
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}" --watch
@@ -53,6 +53,7 @@ jobs:
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v1
+        path: "docs/_site/"
 
   # Deployment job
   deploy:
