--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,7 @@ title: nanoFramework Notes
 description: My notes and examples on nanoFramework
 theme: just-the-docs
 
-url: https://TerryFogg.github.io/nanoFramework/docs
+url: https://TerryFogg.github.io/nanoFramework
 
 # Enable or disable the site search
 # Supports true (default) or false
